<resources>
    <string name="app_name">MaterialTunes</string>

    <string name="action_settings">Settings</string>
    <string name="pref_main_title">Preferences</string>
    
    // Preference Strings
    <string name="pref_theme_title">Theme</string>

    // Toolbar Strings
    <string name="equalizer_title">Equalizer</string>
    <string name="playnow_title">Play Now</string>

    // Songs Fragment Strings
    <string name="songmenu_playlist">Add to playlist</string>
    <string name="songmenu_delete">Delete</string>

    // Playlist Fragment Strings
    <string name="playlistmenu_play">Play</string>
    <string name="playlistmenu_delete">Delete</string>
    
    // Transition Strings
    <string name="transition_album_cover">Album Expand</string>
    <string name="transition_album_image">Album Art Expand</string>
    <string name="transition_album_title">Album Title Expand</string>

    // DrawerLayout Items
    <string name="drawer_main">Home</string>
    <string name="drawer_spotify">Spotify Connect</string>
    <string name="drawer_about">About</string>
    <string name="drawer_settings">Settings</string>

    // About Libraries
    <string name="aboutLibraries_description_showIcon">true</string>
    <string name="aboutLibraries_description_showVersion">true</string>
    <string name="aboutLibraries_description_text">A simple and easy media player.</string>

</resources>
