<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nixholas.lynx.Activities.MainActivity">

    <!-- http://stackoverflow.com/questions/26889976/should-use-androidshowasaction-when-not-using-the-appcompat-library -->
    <item
        android:title="@string/playnow_title"
        android:icon="@drawable/ic_subscriptions_white_24dp"
        app:showAsAction="always"/>

    <!-- http://stackoverflow.com/questions/26889976/should-use-androidshowasaction-when-not-using-the-appcompat-library -->
    <item
        android:title="@string/equalizer_title"
        android:icon="@drawable/ic_equalizer_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
