<RelativeLayout
    android:id="@+id/album_layout"
    android:focusable="true"
    android:clickable="true"
    android:stateListAnimator="@anim/lift_on_touch"
    android:layout_width="match_parent"
    android:layout_height="260sp"
    android:layout_gravity="center"
    android:layout_margin="@dimen/card_margin"
    card_view:cardCornerRadius="@dimen/card_album_radius"
    android:foreground="?android:attr/selectableItemBackground"
    android:transitionName="@string/transition_album_cover"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/album_thumbnail"
                android:adjustViewBounds="true"
                android:layout_width="match_parent"
                android:layout_height="200sp"
                android:scaleType="centerInside"
                android:transitionName="@string/transition_album_image"/>

            <TextView
                android:id="@+id/album_cardtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/album_thumbnail"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:paddingTop="@dimen/album_title_padding"
                android:textStyle="bold"
                android:textColor="@color/album_title"
                android:transitionName="@string/transition_album_title"
                android:textSize="@dimen/album_title"
                android:maxLines="1"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/album_cardartist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/album_cardtitle"
                android:paddingBottom="@dimen/songs_count_padding_bottom"
                android:paddingLeft="@dimen/album_title_padding"
                android:paddingRight="@dimen/album_title_padding"
                android:textSize="@dimen/songs_count"
                android:maxLines="1"
                android:ellipsize="end" />

        </RelativeLayout>
    </RelativeLayout>
